--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -178,15 +178,18 @@
                 show my journey and the effort I've put in, whether big or
                 small. Each project is designed to work well and load quickly,
                 even on mobile. I’m always updating my work, so feel free to
-                check it out and see what I’ve been up to. You can also follow
-                my progress on my Student GitHub account:
-                <a
-                  href="https://github.com/KathrinKath"
-                  target="_blank"
-                  aria-label="GitHub student account"
+                check it out and see what I’ve been up to.
+                <span class="link-span"
+                  >You can also follow my progress on my
+                  <a
+                    href="https://github.com/KathrinKath"
+                    target="_blank"
+                    aria-label="GitHub student account"
+                  >
+                    <b>Student GitHub account.</b></a
+                  ></span
                 >
-                  <i class="fa-brands fa-square-github" aria-hidden="true"></i>
-                </a>
+
                 <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
               </p>
             </div>
