--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -181,15 +181,18 @@
                 Jedes Projekt ist so gestaltet, dass es gut funktioniert und
                 schnell lädt, sogar auf mobilen Geräten. Ich aktualisiere meine
                 Arbeiten ständig, also schau gerne vorbei und sieh dir an, was
-                ich so mache. Du kannst auch meinen Fortschritt auf meinem
-                Student GitHub-Konto verfolgen:
-                <a
-                  href="https://github.com/KathrinKath"
-                  target="_blank"
-                  aria-label="GitHub student account"
-                >
-                  <i class="fa-brands fa-square-github" aria-hidden="true"></i>
-                </a>
+                ich so mache.
+                <span class="link-span"
+                  >Sie Können auch meinen Fortschritt auf meinem
+                  <a
+                    href="https://github.com/KathrinKath"
+                    target="_blank"
+                    aria-label="GitHub student account"
+                  >
+                    <b>Student GitHub-Konto</b></a
+                  >
+                  verfolgen.
+                </span>
                 <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
               </p>
             </div>
