--- a/index-german.html
+++ b/index-german.html
@@ -185,22 +185,29 @@
             </div>
             <p>
               <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-              Ich bin Absolvent der National School of Practical Engineers am
-              Technion (Israelisches Institut für Technologie) in der Stadt
-              Haifa.
-              <br />
-
-              Ich habe an der National School of Practical Engineers des
-              Technion (Israelisches Institut für Technologie) in Haifa meinen
-              Abschluss gemacht. <br />
+              <span class="link-span"
+                >Ich bin Absolvent der
+                <a href="https://www.pet.ac.il/" target="_blank"
+                  >National School of Practical Engineers</a
+                >
+                am
+                <a href="https://www.technion.ac.il/en/home-2/" target="_blank"
+                  >Technion (Israelisches Institut für Technologie)</a
+                >
+                in der Stadt Haifa.</span
+              >
               Im Jahr 2017 erhielt ich mein Diplom in
               Software-Praktikumsingenieurwesen. <br />
-
               2018, zog ich nach Deutschland, um neue Möglichkeiten zu suchen
               und eine langfristige Karriere zu verfolgen. <br />
-              Derzeit bin ich Student am Digital Career Institute (DCI) im
-              Bereich Webentwicklung und besuche zusätzlich einen Deutschkurs
-              auf C1-Niveau. <br />
+              <span class="link-span"
+                >Derzeit bin ich Student am
+                <a href="https://digitalcareerinstitute.org/" target="_blank"
+                  >Digital Career Institute (DCI)</a
+                >im Bereich Webentwicklung und besuche zusätzlich einen
+                Deutschkurs auf C1-Niveau.</span
+              >
+              <br />
               Ich wohne in Berlin und werde mein Studium im Februar 2025
               abschließen. <br />
 
