--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
@@ -191,18 +191,33 @@
             </div>
             <p>
               <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-              I graduated from the National School of Practical Engineers at the
-              Technion (Israeli Institute of Technology) in Haifa. In 2017, I
-              received my diploma in Software Practical Engineering. <br />
-
+              <span class="link-span"
+                >I graduated from the
+                <a href="https://www.pet.ac.il/" target="_blank"
+                  >National School of Practical Engineers</a
+                >
+                at the
+                <a href="https://www.technion.ac.il/en/home-2/" target="_blank"
+                  >Technion (Israeli Institute of Technology)</a
+                >
+                in Haifa.</span
+              >
+              In 2017, I received my diploma in Software Practical Engineering.
+              <br />
               In 2018, I moved to Germany to seek new opportunities and pursue a
               long-term career. <br />
-              I am currently a student at the Digital Career Institute (DCI),
-              studying Web Development, and I am also taking a German language
-              course at the C1 level. <br />
-              Based in Berlin, I am set to complete my studies in February 2025.
+              <span class="link-span">
+                I am currently a student at the
+                <a href="https://digitalcareerinstitute.org/" target="_blank"
+                  >Digital Career Institute (DCI)</a
+                >
+                , studying Web Development, and I am also taking a German
+                language course at the C1 level.</span
+              >
               <br />
-
+              I am based in Berlin, I am set to complete my studies in February
+              2025.
+              <br />
               I have a strong passion for front-end development and design and
               am eager to start my career in this field. <br />
               As a Portuguese citizen, an EU member state, I am eligible to work
