--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -20,7 +20,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
@@ -169,52 +169,71 @@
               <h3>Download my documents</h3>
             </div>
             <div class="files">
-              <ul class="files-list">
-                <li title="Translated to German">
-                  <a
-                    href="../Files/Diplom Übersetzung 2023.pdf"
-                    download
-                    aria-label="Download my diploma"
-                  >
-                    <i class="fa-solid fa-download" aria-hidden="true"></i>
-                    Download My
-                    <strong>Diplom</strong> 🇩🇪
-                  </a>
-                </li>
-                <li title="Extended version of my CV">
-                  <a
-                    href="../Files/Kathrin Peled Resume 07.2024 .pdf"
-                    aria-label="Download my resume CV"
-                    download
-                  >
+              <a
+                href="../Files/Diplom Übersetzung 2023.pdf"
+                download
+                aria-label="Download my diploma"
+              >
+                <div class="file-item">
+                  <div class="file-icon">
+                    <i class="fa-solid fa-user-graduate" aria-hidden="true"></i>
+                  </div>
+                  <div class="file-list">
+                    <span title="Translated to German">
+                      My
+                      <strong>Diplom</strong> 🇩🇪
+                    </span>
+                  </div>
+                </div>
+              </a>
+              <a
+                href="../Files/Kathrin Peled Resume 07.2024 .pdf"
+                aria-label="Download my resume CV"
+                download
+              >
+                <div class="file-item">
+                  <div class="file-icon">
                     <i class="fa-solid fa-file" aria-hidden="true"></i>
-
-                    Download My Full <strong>Resume</strong> 🇬🇧
-                  </a>
-                </li>
-                <li title="Resume with relevant experience only">
-                  <a
-                    href="../Files/Kathrin Peled Professional Resume.pdf"
-                    aria-label="Download my professional resume"
-                    download
-                  >
-                    <i class="fa-regular fa-file" aria-hidden="true"></i>
-                    Download My
-                    <strong>Professional Resume</strong> 🇬🇧
-                  </a>
-                </li>
-                <li title="Lebenslauf mit nur relevanter Erfahrung">
-                  <a
-                    href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
-                    download
-                    aria-label="Download my professional CV"
-                  >
-                    <i class="fa-regular fa-file" aria-hidden="true"></i>
-                    Lade meinen
-                    <strong>beruflichen Lebenslauf</strong> herunter 🇩🇪
-                  </a>
-                </li>
-              </ul>
+                  </div>
+                  <div class="file-list">
+                    <span title="Extended version of my CV">
+                      My <strong>Full Resume</strong> 🇬🇧
+                    </span>
+                  </div>
+                </div>
+              </a>
+              <a
+                href="../Files/Kathrin Peled Professional Resume.pdf"
+                aria-label="Download my professional resume"
+                download
+              >
+                <div class="file-item">
+                  <div class="file-icon">
+                    <i class="fa-solid fa-user-tie" aria-hidden="true"></i>
+                  </div>
+                  <div class="file-list">
+                    <span title="Resume with relevant experience only">
+                      <strong>Professional Resume</strong> 🇬🇧
+                    </span>
+                  </div>
+                </div>
+              </a>
+              <a
+                href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
+                download
+                aria-label="Download my professional CV"
+              >
+                <div class="file-item">
+                  <div class="file-icon">
+                    <i class="fa-solid fa-user-tie" aria-hidden="true"></i>
+                  </div>
+                  <div class="file-list">
+                    <span title="Lebenslauf mit nur relevanter Erfahrung">
+                      <strong>Professional Resume</strong> 🇩🇪
+                    </span>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
         </div>
