updated file pages

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -154,7 +154,9 @@
               </ul>
             </li>
             <li>
-              <a href="../Pages/contact-deutsch.html" aria-label="Contact"
+              <a
+                href="../Pages/contact-deutsch.html#contact"
+                aria-label="Contact"
                 >Kontakt</a
               >
             </li>
