--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -20,7 +20,7 @@
       property="og:url"
       content="https://www.facebook.com/profile.php?id=61563925780935"
     />
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
     <meta name="robots" content="index, follow" />
@@ -152,7 +152,7 @@
               </ul>
             </li>
             <li>
-              <a href="../index-german.html#contact" aria-label="Kontakt"
+              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
