--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -154,7 +154,7 @@
               </ul>
             </li>
             <li>
-              <a href="../index-german.html#contact" aria-label="Kontakt"
+              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
@@ -170,7 +170,7 @@
         <div class="my-files">
           <div class="container">
             <div class="h3-title">
-              <h3>Download my documents</h3>
+              <h3>Lade Maine Dateien Herunter</h3>
             </div>
             <div class="files">
               <a
