--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -153,7 +153,7 @@
               </ul>
             </li>
             <li>
-              <a href="../index-german.html#contact" aria-label="Kontakt"
+              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
