--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -197,9 +197,6 @@
             </div>
             <div class="contact-directly">
               <div class="container">
-                <div class="h3-title">
-                  <h3>Kontaktieren Sie mich direkt</h3>
-                </div>
                 <div class="contact-options">
                   <ul class="contact-options-list">
                     <li>
@@ -211,8 +208,8 @@
                         <i
                           class="fa-regular fa-envelope"
                           aria-hidden="true"
+                          title="Email: draculady@onmail.com"
                         ></i>
-                        <b title="draculady@onmail.com"> Email</b>
                       </a>
                     </li>
                     <li>
@@ -221,12 +218,11 @@
                         target="_blank"
                         aria-label="LinkedIn profile"
                       >
-                        <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
-                        <b
-                          title="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        >
-                          LinkedIn</b
-                        >
+                        <i
+                          class="fa-brands fa-linkedin"
+                          aria-hidden="true"
+                          title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                        ></i>
                       </a>
                     </li>
                     <li>
@@ -235,20 +231,25 @@
                         target="_blank"
                         aria-label="GitHub profile"
                       >
-                        <i class="fa-brands fa-github" aria-hidden="true"></i>
-                        <b title="https://github.com/DraculadyCode">
-                          GitHub</b
-                        ></a
-                      >
+                        <i
+                          class="fa-brands fa-github"
+                          aria-hidden="true"
+                          title="GitHub: https://github.com/DraculadyCode"
+                        ></i>
+                      </a>
                     </li>
                     <li>
                       <a
                         href="https://t.me/Draculady"
                         target="_blank"
-                        rel="noopener noreferrer"
+                        rel="Link to Telegram"
                       >
-                        <i class="fab fa-telegram" aria-hidden="true"></i>
-                        <b title="Telegram">Telegram</b>
+                        <i
+                          class="fab fa-telegram"
+                          aria-hidden="true"
+                          title="Telegram: @Draculady
+                        "
+                        ></i>
                       </a>
                     </li>
                     <li>
@@ -256,8 +257,8 @@
                         <i
                           class="fa-regular fa-comment-alt"
                           aria-hidden="true"
+                          title="SMS:+4917685639174"
                         ></i>
-                        <b title="sms:+4917685639174">SMS</b>
                       </a>
                     </li>
                     <li>
@@ -266,13 +267,12 @@
                         target="_blank"
                         aria-label="facebook page"
                       >
-                        <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                        <b
-                          title="https://www.facebook.com/profile.php?id=61563925780935"
-                        >
-                          Facebook</b
-                        ></a
-                      >
+                        <i
+                          class="fa-brands fa-facebook"
+                          aria-hidden="true"
+                          title="Facebook: https://www.facebook.com/profile.php?id=61563925780935"
+                        ></i>
+                      </a>
                     </li>
                     <li>
                       <a
@@ -280,11 +280,11 @@
                         target="_blank"
                         aria-label="Twitter X page"
                       >
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <b title="https://x.com/DraculadyKath">
-                          Twitter/ X
-                        </b></a
-                      >
+                        <i
+                          class="fa-brands fa-x-twitter"
+                          title="Twitter/X: https://x.com/DraculadyKath"
+                        ></i>
+                      </a>
                     </li>
                     <li>
                       <a
@@ -296,13 +296,9 @@
                           class="bx bxl-netlify"
                           aria-hidden="true"
                           alt="Netlify Logo"
+                          title="Netlify: https://app.netlify.com/teams/draculadycode/sites"
                         ></i>
-                        <b
-                          title="https://app.netlify.com/teams/draculadycode/sites"
-                        >
-                          Netlify
-                        </b></a
-                      >
+                      </a>
                     </li>
                     <li>
                       <a
@@ -314,13 +310,9 @@
                           class="bx bxs-up-arrow"
                           aria-hidden="true"
                           alt="Vercel Logo"
+                          title="Vercel: https://vercel.com/kathrins-projects-926c884c"
                         ></i>
-                        <b
-                          title="https://vercel.com/kathrins-projects-926c884c"
-                        >
-                          Vercel
-                        </b></a
-                      >
+                      </a>
                     </li>
                     <li>
                       <a
@@ -328,11 +320,11 @@
                         target="_blank"
                         aria-label="GitHub Student page"
                       >
-                        <i class="fa-brands fa-square-github"></i>
-                        <b title="https://github.com/KathrinKath">
-                          GitHub (Student)
-                        </b></a
-                      >
+                        <i
+                          class="fa-brands fa-square-github"
+                          title="GitHub Student: https://github.com/KathrinKath"
+                        ></i>
+                      </a>
                     </li>
                   </ul>
                 </div>
