contact pages and social media links update

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -195,145 +195,153 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section id="social-medias">
+        <div class="container">
+          <div class="h2-title">
+            <h2>
+              Kontaktiere mich hier...<i class="fa-regular fa-face-smile"></i>
+            </h2>
+          </div>
+          <div class="contact-options-divs">
             <div class="contact-directly">
-              <div class="container">
-                <div class="contact-options">
-                  <ul class="contact-options-list">
-                    <li>
-                      <a
-                        href="mailto: draculady@onmail.com"
-                        aria-label="Email me"
-                        target="_blank"
-                      >
-                        <i
-                          class="fa-regular fa-envelope"
-                          aria-hidden="true"
-                          title="Email: draculady@onmail.com"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        target="_blank"
-                        aria-label="LinkedIn profile"
-                      >
-                        <i
-                          class="fa-brands fa-linkedin"
-                          aria-hidden="true"
-                          title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://github.com/DraculadyCode"
-                        target="_blank"
-                        aria-label="GitHub profile"
-                      >
-                        <i
-                          class="fa-brands fa-github"
-                          aria-hidden="true"
-                          title="GitHub: https://github.com/DraculadyCode"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://t.me/Draculady"
-                        target="_blank"
-                        rel="Link to Telegram"
-                      >
-                        <i
-                          class="fab fa-telegram"
-                          aria-hidden="true"
-                          title="Telegram: @Draculady
+              <div class="contact-options">
+                <ul class="contact-options-list">
+                  <li>
+                    <a
+                      href="mailto: draculady@onmail.com"
+                      aria-label="Email me"
+                      target="_blank"
+                    >
+                      <i
+                        class="fa-regular fa-envelope"
+                        aria-hidden="true"
+                        title="Email: draculady@onmail.com"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/kathrin-peled-draculady/"
+                      target="_blank"
+                      aria-label="LinkedIn profile"
+                    >
+                      <i
+                        class="fa-brands fa-linkedin"
+                        aria-hidden="true"
+                        title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://github.com/DraculadyCode"
+                      target="_blank"
+                      aria-label="GitHub profile"
+                    >
+                      <i
+                        class="fa-brands fa-github"
+                        aria-hidden="true"
+                        title="GitHub: https://github.com/DraculadyCode"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://t.me/Draculady"
+                      target="_blank"
+                      rel="Link to Telegram"
+                    >
+                      <i
+                        class="fab fa-telegram"
+                        aria-hidden="true"
+                        title="Telegram: @Draculady
                         "
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="sms:+4917685639174" aria-label="Send SMS">
-                        <i
-                          class="fa-regular fa-comment-alt"
-                          aria-hidden="true"
-                          title="SMS:+4917685639174"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.facebook.com/profile.php?id=61563925780935"
-                        target="_blank"
-                        aria-label="facebook page"
-                      >
-                        <i
-                          class="fa-brands fa-facebook"
-                          aria-hidden="true"
-                          title="Facebook: https://www.facebook.com/profile.php?id=61563925780935"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://x.com/DraculadyKath"
-                        target="_blank"
-                        aria-label="Twitter X page"
-                      >
-                        <i
-                          class="fa-brands fa-x-twitter"
-                          title="Twitter/X: https://x.com/DraculadyKath"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://app.netlify.com/teams/draculadycode/sites"
-                        target="_blank"
-                        aria-label="Netlify page"
-                      >
-                        <i
-                          class="bx bxl-netlify"
-                          aria-hidden="true"
-                          alt="Netlify Logo"
-                          title="Netlify: https://app.netlify.com/teams/draculadycode/sites"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://vercel.com/kathrins-projects-926c884c"
-                        target="_blank"
-                        aria-label="Vercel page"
-                      >
-                        <i
-                          class="bx bxs-up-arrow"
-                          aria-hidden="true"
-                          alt="Vercel Logo"
-                          title="Vercel: https://vercel.com/kathrins-projects-926c884c"
-                        ></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://github.com/KathrinKath"
-                        target="_blank"
-                        aria-label="GitHub Student page"
-                      >
-                        <i
-                          class="fa-brands fa-square-github"
-                          title="GitHub Student: https://github.com/KathrinKath"
-                        ></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="sms:+4917685639174" aria-label="Send SMS">
+                      <i
+                        class="fa-regular fa-comment-alt"
+                        aria-hidden="true"
+                        title="SMS:+4917685639174"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/profile.php?id=61563925780935"
+                      target="_blank"
+                      aria-label="facebook page"
+                    >
+                      <i
+                        class="fa-brands fa-facebook"
+                        aria-hidden="true"
+                        title="Facebook: https://www.facebook.com/profile.php?id=61563925780935"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://x.com/DraculadyKath"
+                      target="_blank"
+                      aria-label="Twitter X page"
+                    >
+                      <i
+                        class="fa-brands fa-x-twitter"
+                        title="Twitter/X: https://x.com/DraculadyKath"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://app.netlify.com/teams/draculadycode/sites"
+                      target="_blank"
+                      aria-label="Netlify page"
+                    >
+                      <i
+                        class="bx bxl-netlify"
+                        aria-hidden="true"
+                        alt="Netlify Logo"
+                        title="Netlify: https://app.netlify.com/teams/draculadycode/sites"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://vercel.com/kathrins-projects-926c884c"
+                      target="_blank"
+                      aria-label="Vercel page"
+                    >
+                      <i
+                        class="bx bxs-up-arrow"
+                        aria-hidden="true"
+                        alt="Vercel Logo"
+                        title="Vercel: https://vercel.com/kathrins-projects-926c884c"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://github.com/KathrinKath"
+                      target="_blank"
+                      aria-label="GitHub Student page"
+                    >
+                      <i
+                        class="fa-brands fa-square-github"
+                        title="GitHub Student: https://github.com/KathrinKath"
+                      ></i>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
       </section>
-
       <div class="backtotop">
         <a href="#" aria-label="Zurück nach oben">
           <span class="back-to">Nach</span> oben
