contact pages and social media links update

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -211,14 +211,14 @@
                 <ul class="contact-options-list">
                   <li>
                     <a
-                      href="mailto: draculady@onmail.com"
+                      href="mailto: draculadycode@gmail.com"
                       aria-label="Email me"
                       target="_blank"
                     >
                       <i
                         class="fa-regular fa-envelope"
                         aria-hidden="true"
-                        title="Email: draculady@onmail.com"
+                        title="Email: draculadycode@gmail.com"
                       ></i>
                     </a>
                   </li>
